--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
   <body class="body">
     <header>
       <nav>
-        <div  href="index.html"  class="logo"><img src="images/logo.png" alt=""></div>
+        <div  href="index.html"  class="logo">Bernardo Nunes</div>
         <ul>
           <li><a class="nav-link"href="#work">Work</a></li>
           <li><a class="nav-link" href="#grid-section-article">Articles</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
           <li ><a id="header-link" >Contact</a></li>
         </ul>
+        <button class="hamburger-menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
       </nav>      
     </header>
     
