--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <body class="body">
     <header>
       <nav>
-        <div  href="index.html"  class="logo">Bernardo Nunes</div>
+        <div  href="index.html">
+          <li><a class="nav-link"href="#work">Bernardo Nunes</a></li>
+        </div>
         <ul>
           <li><a class="nav-link"href="#work">Work</a></li>
           <li><a class="nav-link" href="#grid-section-article">Articles</a></li>
