--- a/index.html
+++ b/index.html
@@ -14,21 +14,17 @@
   <body class="body">
     <header>
       <nav>
-        <div  href="index.html">
-          <li><a class="nav-link"href="#work">Bernardo Nunes</a></li>
-        </div>
-        <ul>
-          <li><a class="nav-link"href="#work">Work</a></li>
+        <div class="logo"><img src="images/logo.png" alt=""></div>
+        <button class="nav-toggle" aria-label="Toggle navigation">
+          <span class="hamburger"></span>
+        </button>
+        <ul class="nav-menu">
+          <li><a class="nav-link" href="#work">Work</a></li>
           <li><a class="nav-link" href="#grid-section-article">Articles</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
-          <li ><a id="header-link" >Contact</a></li>
+          <li><a id="header-link">Contact</a></li>
         </ul>
-        <button class="hamburger-menu">
-          <span></span>
-          <span></span>
-          <span></span>
-        </button>
-      </nav>      
+      </nav>
     </header>
     
     <section id="hero" class="hero">
