--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <body class="body">
     <header>
       <nav>
-        <div class="logo"><img src="images/logo.png" alt=""></div>
+        <div class="logo"> alt="">
+          <li><a class="nav-link" href="#work">Work</a></li>
+         </div>
         <button class="nav-toggle" aria-label="Toggle navigation">
           <span class="hamburger"></span>
         </button>
