--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <nav>
         <div class="logo"> alt="">
-          <li><a class="nav-link" href="#work">Work</a></li>
+          <li><a>Bernardo Nunes</a></li>
          </div>
         <button class="nav-toggle" aria-label="Toggle navigation">
           <span class="hamburger"></span>
