--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body class="body">
     <header>
       <nav>
-        <div class="logo"> alt="">
+        <div>
           <li><a>Bernardo Nunes</a></li>
          </div>
         <button class="nav-toggle" aria-label="Toggle navigation">
