--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <nav>
         <div>
-          <li><a>Bernardo Nunes</a></li>
+          <p>Bernardo Nunes</p>
          </div>
         <button class="nav-toggle" aria-label="Toggle navigation">
           <span class="hamburger"></span>
