--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <body class="body">
     <header>
       <nav>
-        <div>
-          <p>Bernardo Nunes</p>
+        <div> <p>Bernardo Nunes</p>
          </div>
         <button class="nav-toggle" aria-label="Toggle navigation">
           <span class="hamburger"></span>
