html burguer menu

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
       <nav>
         <div> <p>Bernardo Nunes</p>
          </div>
-        <button class="nav-toggle" aria-label="Toggle navigation">
-          <span class="hamburger"></span>
-        </button>
-        <ul class="nav-menu">
+         <div class="menu-icon">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <ul>
           <li><a class="nav-link" href="#work">Work</a></li>
           <li><a class="nav-link" href="#grid-section-article">Articles</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
