--- a/index.html
+++ b/index.html
@@ -13,21 +13,28 @@
 
   <body class="body">
     <header>
-      <nav>
-        <div> <p>Bernardo Nunes</p>
-         </div>
-         <div class="menu-icon">
-          <span></span>
-          <span></span>
-          <span></span>
+      <div class="navbar">
+        <div class="navbar-left">
+          <h5>Bernardo Nunes</h5>
         </div>
-        <ul>
-          <li><a class="nav-link" href="#work">Work</a></li>
-          <li><a class="nav-link" href="#grid-section-article">Articles</a></li>
-          <li><a class="nav-link" href="#about">About</a></li>
-          <li><a id="header-link">Contact</a></li>
-        </ul>
-      </nav>
+        <div class="navbar-right">
+          <a href="#">Work</a>
+          <a href="#">Articles</a>
+          <a href="#">About</a>
+          <a href="#">Contacts</a>
+        </div>
+        <div class="navbar-icon">&#9776;</div>
+        <div class="navbar-mobile">
+          <a href="#">Work</a>
+          <a href="#">Articles</a>
+          <a href="#">About</a>
+          <a href="#">Contacts</a>
+        </div>
+      </div>
+  
+      <script type="text/javascript" src="script.js"></script>
+
+      
     </header>
     
     <section id="hero" class="hero">
