--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <div class="navbar">
         <div class="navbar-left">
-          <h3>b studio</h3>
+          <h3>b_studio</h3>
         </div>
         <div class="navbar-right">
           <a href="#">Work</a>
