links on navbar

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
           <h3>b_studio</h3>
         </div>
         <div class="navbar-right">
-          <a href="#">Work</a>
-          <a href="#">Articles</a>
-          <a href="#">About</a>
-          <a href="#">Contacts</a>
+          <a href="#hero">Work</a>
+          <a href="#work">Articles</a>
+          <a href="#about">About</a>
+          <a href="#footer">Contacts</a>
         </div>
       </div>
   
